plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.0'
	id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.hnh.example'
version = '0.0.1-SNAPSHOT'
description = 'API Gateway for Millions Transaction'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Spring Boot Starters
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-integration'
	
	// OAuth2 Resource Server
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
	
	// Database
	runtimeOnly 'com.mysql:mysql-connector-j'
	testRuntimeOnly 'com.h2database:h2'
	
	// Liquibase
	implementation 'org.liquibase:liquibase-core'
	
	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'
	
	// Validation
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	// MapStruct
	implementation 'org.mapstruct:mapstruct:1.6.1'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.1'
	
	// Kafka
	implementation 'org.springframework.kafka:spring-kafka'
	
	// Swagger/OpenAPI
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.11'
	
	// JANSI for colored console output
	implementation 'org.fusesource.jansi:jansi:2.4.1'
	
	// Testing
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter'
	testImplementation 'org.testcontainers:mysql'
	testImplementation 'org.testcontainers:kafka'

	testImplementation 'org.mockito:mockito-inline:5.2.0'
        // WireMock removed due to Java 17+ compatibility issues
    testImplementation 'net.datafaker:datafaker:2.0.2'
    testImplementation 'io.jsonwebtoken:jjwt-api:0.12.3'
    testRuntimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
    testRuntimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'
}

tasks.named('test') {
	useJUnitPlatform()
}
